log scale visualization and simple prediction on temp working

--- a/Adam-clean-convert-timestamp-data.ipynb
+++ b/Adam-clean-convert-timestamp-data.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pickle"
+    "import numpy as np"
    ]
   },
   {
