simple, weekdays prediction working, bins prediction started

--- a/adam_simple_prediction.ipynb
+++ b/adam_simple_prediction.ipynb
@@ -744,7 +744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trying to predict "
+    "## Prediction"
    ]
   },
   {
@@ -1082,51 +1082,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5470"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5470"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(yhat)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 56,
    "metadata": {
     "collapsed": false
@@ -1134,29 +1089,6 @@
    "outputs": [],
    "source": [
     "yhat[:] = crime_chicago_count_weather['count'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1067.88994516,  1067.88994516,  1067.88994516, ...,  1067.88994516,\n",
-       "        1067.88994516,  1067.88994516])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "yhat"
    ]
   },
   {
@@ -1223,13 +1155,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- discuss dependence of crime on temperature\n"
+   ]
   }
  ],
  "metadata": {
