--- a/exploration/brano_temporal_analysis.ipynb
+++ b/exploration/brano_temporal_analysis.ipynb
@@ -1203,7 +1203,8 @@
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1229,6 +1230,14 @@
    ],
    "source": [
     "crimes_weekday_hour[['count']].plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see how Friday night differs from the rest of the week with higher number of counts between 7pm and midnight.  \n",
+    "Saturday and Sunday exhibit much lower activity in the morning rush hours and overall Sunday is the least criminal day of the week."
    ]
   },
   {
@@ -2027,21 +2036,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
