Corrected some spelling mistakes etc.

--- a/exploration/brano_location_peak_analysis.ipynb
+++ b/exploration/brano_location_peak_analysis.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lode crime records for the city of Chicago"
+    "Load crime records for the city of Chicago"
    ]
   },
   {
@@ -1944,7 +1944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the entire city of Chicago there has been at least 58 thefts every single day (with the maximum of 453 thefts per day). The thefts at the shopping mall are quite reasonable fraction of this."
+    "In the entire city of Chicago there has been at least 58 thefts every single day (with the maximum of 453 thefts per day). The thefts at the shopping mall are just a small fraction of this which is quite reasonable."
    ]
   },
   {
@@ -1991,21 +1991,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
