--- a/exploration/brano_visualization_markers.ipynb
+++ b/exploration/brano_visualization_markers.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have decided to use 50 bins as this number offers a good resolution and can be computed in a reasonable time. The bins are based on gps coordinates."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -347,10 +354,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this part we add some shopping centres (17) to the map - using the gps coordinates. These shopping centres are some of the biggest ones in Chicago, and it is quite interesting to see how much criminal activity is near the individual shopping centres. In some of them it is more, in some less, but it still gives an interesting insight for the businesses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -389,34 +404,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we just save the map into a html file as we want to use it in our web app."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "m.save('map_with_markers.html')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
