Temporal analysis of data

--- a/exploration/brano_temporal_analysis.ipynb
+++ b/exploration/brano_temporal_analysis.ipynb
@@ -43,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is what a record of crime looks like:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
@@ -340,6 +347,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this part we look at the number of crimes over different months. The maximum numbers occur during the summer, which may be explained by higher temperatures or the fact that people have more free time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
@@ -507,6 +521,13 @@
    "metadata": {},
    "source": [
     "## Hourly crimes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this part we look at the number of crimes in different hours.The maximum occurs during the late evening and during the lunch time."
    ]
   },
   {
@@ -728,6 +749,13 @@
    "metadata": {},
    "source": [
     "## Crimes for every hour in a week"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we explore the crimes by hour and day. The pattern of crimes repeats every day, but there are slight variations for each day. Sunday appears to be the most peaceful day, while Friday is probably the worst."
    ]
   },
   {
