Binning of locations

--- a/exploration/brano_binning.ipynb
+++ b/exploration/brano_binning.ipynb
@@ -102,6 +102,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this part we filter the crimes by their locations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {
