Correct tomorrow output

--- a/exploration/adam_prediction_bins.ipynb
+++ b/exploration/adam_prediction_bins.ipynb
@@ -1090,7 +1090,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.save('tomorrow.html')"
+    "m.save('../templates/tomorrow.html')"
    ]
   },
   {
